--- a/recipe.html
+++ b/recipe.html
@@ -23,7 +23,7 @@
             <br>
 
             <div class="info">
-                <img class="center info"; src="https://jonathanroux.com/cake.jpg">
+                <img class="center info"; src="cake.jpg">
                 <table class="info">
                     <tr>
                         <th>Article</th><th>Preparation</th><th>Cooking time</th><th>Total time</th>
