--- a/recipe.html
+++ b/recipe.html
@@ -4,6 +4,7 @@
     <head>
         <title>Chocolate cake</title>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="recipe.css">
     </head>
     <body>
@@ -54,7 +55,7 @@
                     <tr><td><p class="number">1</p></td><td class="instruction_step">Melt the chocolate and the butter together</td></tr>
                     <tr><td><p class="number">2</p></td><td class="instruction_step">Mix the sugar, eggs and flour</td></tr>
                     <tr><td><p class="number">3</p></td><td class="instruction_step">Put everything together and mix until it becomes smooth</td></tr>
-                    <tr><td><p class="number">4</p></td><td class="instruction_step">Bake in the oven</td></tr>      
+                    <tr><td><p class="number">4</p></td><td class="instruction_step">Bake in the oven</td></tr>
                     </table>
                 </div>
             </div>
